# simple-tower-mysql-service

./: .travis.yml  Cargo.toml  README.md  build.rs
mysql/: create_table.sql
proto/base/: timestamp.proto
proto/domain/: item.proto
proto/services/: simple_service.proto
