[package]
name = "simple-tower-mysql-service"
version = "0.1.0"
authors = ["Jakob Dalsgaard <jakob@dalsgaard.net>"]

[dependencies]
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
futures = "0.1"
bytes = "0.4"
env_logger = { version = "0.5", default-features = false }
log = "0.4"
http = "0.1"
prost = "0.3"
prost-derive = "0.3"
tokio-core = "0.1"
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-http = { git = "https://github.com/tower-rs/tower-http" }
tower-service = { git = "https://github.com/tower-rs/tower" }
mysql_async = "0.14.2"
lazy_static = "1.0"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }
